--- a/development/kindergarten_roster_management/www/event.html
+++ b/development/kindergarten_roster_management/www/event.html
@@ -129,7 +129,7 @@
                 <tr>
                     <th>
                         <select name="hour_start" onchange="hour_start_outputSelectedValueAndText(this);">
-                            <option value="0">開始：時間</option>
+                            <option value="0">時</option>
                             <option value="00:">0時</option>
                             <option value="1:">1時</option>
                             <option value="2:">2時</option>
@@ -159,75 +159,75 @@
                     <th>
 
                         <select name="minute_start" onchange="minute_start_outputSelectedValueAndText(this);">
-                            <option value="0">開始：分</option>
-                            <option value="00～">0分</option>
-                            <option value="1～">1分</option>
-                            <option value="2～">2分</option>
-                            <option value="3～">3分</option>
-                            <option value="4～">4分</option>
-                            <option value="5～">5分</option>
-                            <option value="6～">6分</option>
-                            <option value="7～">7分</option>
-                            <option value="8～">8分</option>
-                            <option value="9～">9分</option>
-                            <option value="10～">10分</option>
-                            <option value="11～">11分</option>
-                            <option value="12～">12分</option>
-                            <option value="13～">13分</option>
-                            <option value="14～">14分</option>
-                            <option value="15～">15分</option>
-                            <option value="16～">16分</option>
-                            <option value="17～">17分</option>
-                            <option value="18～">18分</option>
-                            <option value="19～">19分</option>
-                            <option value="20～">20分</option>
-                            <option value="21～">21分</option>
-                            <option value="22～">22分</option>
-                            <option value="23～">23分</option>
-                            <option value="24～">24分</option>
-                            <option value="25～">25分</option>
-                            <option value="26～">26分</option>
-                            <option value="27～">27分</option>
-                            <option value="28～">28分</option>
-                            <option value="29～">29分</option>
-                            <option value="30～">30分</option>
-                            <option value="31～">31分</option>
-                            <option value="32～">32分</option>
-                            <option value="33～">33分</option>
-                            <option value="34～">34分</option>
-                            <option value="35～">35分</option>
-                            <option value="36～">36分</option>
-                            <option value="37～">37分</option>
-                            <option value="38～">38分</option>
-                            <option value="39～">39分</option>
-                            <option value="40～">40分</option>
-                            <option value="41～">41分</option>
-                            <option value="42～">42分</option>
-                            <option value="43～">43分</option>
-                            <option value="44～">44分</option>
-                            <option value="45～">45分</option>
-                            <option value="46～">46分</option>
-                            <option value="47～">47分</option>
-                            <option value="48～">48分</option>
-                            <option value="49～">49分</option>
-                            <option value="50～">50分</option>
-                            <option value="51～">51分</option>
-                            <option value="52～">52分</option>
-                            <option value="53～">53分</option>
-                            <option value="54～">54分</option>
-                            <option value="55～">55分</option>
-                            <option value="56～">56分</option>
-                            <option value="57～">57分</option>
-                            <option value="58～">58分</option>
-                            <option value="59～">59分</option>
+                            <option value="0">分</option>
+                            <option value="00">0分</option>
+                            <option value="1">1分</option>
+                            <option value="2">2分</option>
+                            <option value="3">3分</option>
+                            <option value="4">4分</option>
+                            <option value="5">5分</option>
+                            <option value="6">6分</option>
+                            <option value="7">7分</option>
+                            <option value="8">8分</option>
+                            <option value="9">9分</option>
+                            <option value="10">10分</option>
+                            <option value="11">11分</option>
+                            <option value="12">12分</option>
+                            <option value="13">13分</option>
+                            <option value="14">14分</option>
+                            <option value="15">15分</option>
+                            <option value="16">16分</option>
+                            <option value="17">17分</option>
+                            <option value="18">18分</option>
+                            <option value="19">19分</option>
+                            <option value="20">20分</option>
+                            <option value="21">21分</option>
+                            <option value="22">22分</option>
+                            <option value="23">23分</option>
+                            <option value="24">24分</option>
+                            <option value="25">25分</option>
+                            <option value="26">26分</option>
+                            <option value="27">27分</option>
+                            <option value="28">28分</option>
+                            <option value="29">29分</option>
+                            <option value="30">30分</option>
+                            <option value="31">31分</option>
+                            <option value="32">32分</option>
+                            <option value="33">33分</option>
+                            <option value="34">34分</option>
+                            <option value="35">35分</option>
+                            <option value="36">36分</option>
+                            <option value="37">37分</option>
+                            <option value="38">38分</option>
+                            <option value="39">39分</option>
+                            <option value="40">40分</option>
+                            <option value="41">41分</option>
+                            <option value="42">42分</option>
+                            <option value="43">43分</option>
+                            <option value="44">44分</option>
+                            <option value="45">45分</option>
+                            <option value="46">46分</option>
+                            <option value="47">47分</option>
+                            <option value="48">48分</option>
+                            <option value="49">49分</option>
+                            <option value="50">50分</option>
+                            <option value="51">51分</option>
+                            <option value="52">52分</option>
+                            <option value="53">53分</option>
+                            <option value="54">54分</option>
+                            <option value="55">55分</option>
+                            <option value="56">56分</option>
+                            <option value="57">57分</option>
+                            <option value="58">58分</option>
+                            <option value="59">59分</option>
                         </select>
                     </th>
                     <th>
-                        ～
+                        <p font size="1" color="#696969">～</p>
                     </th>
                     <th>
                         <select name="hour_end" onchange="hour_end_outputSelectedValueAndText(this);">
-                            <option value="0">終了：時間</option>
+                            <option value="0">時</option>
                             <option value="00:">0時</option>
                             <option value="1:">1時</option>
                             <option value="2:">2時</option>
@@ -256,7 +256,7 @@
                     </th>
                     <th>
                         <select name="minute_end" onchange="minute_end_outputSelectedValueAndText(this);">
-                            <option value="0">終了：分</option>
+                            <option value="0">分</option>
                             <option value="00">0分</option>
                             <option value="1">1分</option>
                             <option value="2">2分</option>
@@ -344,6 +344,9 @@
             <div id="title"></div>
             <div id="QR"></div>
             <div id="test" style="position:absolute;top:550px;left:80px;"></div>
+            <div id="~" style="position:absolute;top:590px;left:205px;"></div>
+            <div id="start" style="position:absolute;top:590px;left:120px;"></div>
+            <div id="end" style="position:absolute;top:590px;left:255px;"></div>
 
         <!-------------------------------------------------------------------------------
           -------------------------------------------------------------------------------
@@ -365,12 +368,6 @@
                     yearindx = value;
                     year = obj.options[idx].text;  // 表示テキスト
                     console.log('value = ' + value + ', ' + 'text = ' + yearindx);
-                    if ((yearindx != 0) && (monthindx != 0) && (dayindx != 0)) {
-                        var today = new Date(yearindx+"/"+monthindx+"/"+dayindx);
-                        var weekday = ["日", "月", "火", "水", "木", "金", "土"];
-                        var wday = "（" + weekday[today.getDay()] + "）";
-                        console.log(wday);
-                    }
                 }
 
                 function month_outputSelectedValueAndText(obj) {
@@ -379,12 +376,6 @@
                     monthindx = value;
                     month = obj.options[idx].text;  // 表示テキスト
                     console.log('value = ' + value + ', ' + 'text = ' + monthindx);
-                    if ((yearindx != 0) && (monthindx != 0) && (dayindx != 0)) {
-                        var today = new Date(yearindx + "/" + monthindx + "/" + dayindx);
-                        var weekday = ["日", "月", "火", "水", "木", "金", "土"];
-                        var wday = "（" + weekday[today.getDay()] + "）";
-                        console.log(wday);
-                    }
                 }
 
                 function day_outputSelectedValueAndText(obj) {
@@ -393,12 +384,6 @@
                     dayindx = value;
                     day = obj.options[idx].text;  // 表示テキス
                     console.log('value = ' + value + ', ' + 'text = ' + dayindx);
-                    if ((yearindx != 0) && (monthindx != 0) && (dayindx != 0)) {
-                        var today = new Date(yearindx + "/" + monthindx + "/" + dayindx);
-                        var weekday = ["日", "月", "火", "水", "木", "金", "土"];
-                        var wday = "（" + weekday[today.getDay()] + "）";
-                        console.log(wday);
-                    }
                 }
 
                 /*function week_outputSelectedValueAndText(obj) {
@@ -457,7 +442,11 @@
                         var today = new Date(yearindx + "/" + monthindx + "/" + dayindx);
                         var weekday = ["日", "月", "火", "水", "木", "金", "土"];
                         var wday = "（" + weekday[today.getDay()] + "）";
-                        console.log(wday); document.getElementById("test").innerHTML = "<p id=\"test\"><font face=fantasy size=\"6\" color=\"#696969\">" + (year + month + day + wday) + "<br>" + "　" + (hour_start_indx + minute_start_indx + hour_end_indx + minute_end_indx) + "</font></p>";
+                        console.log(wday);
+                        document.getElementById("test").innerHTML = "<p id=\"test\"><font face=fantasy size=\"6\" color=\"#696969\">" + (year + month + day + wday) + "</font></p>";
+                        document.getElementById("start").innerHTML = "<p id=\"test\"><font face=fantasy size=\"6\" color=\"#696969\">" + (hour_start_indx + minute_start_indx) + "</font></p>";
+                        document.getElementById("~").innerHTML = "<p id=\"~\"><font face=fantasy size=\"6\" color=\"#696969\">～</font></p>";
+                        document.getElementById("end").innerHTML = "<p id=\"test\"><font face=fantasy size=\"6\" color=\"#696969\">" + (hour_end_indx + minute_end_indx) + "</font></p>";
                         console.log(eve);
 
                         if (eveindx == "1") {
@@ -467,19 +456,16 @@
                             //document.write('<img src="./img/sports.jpg" width="792" height="568" />');
                             //document.write(year + month + day + week);
                             document.getElementById("image").innerHTML = "<img src=\"./img/sports.jpg\">";
-                            document.getElementById("title").innerHTML = "<img src=\"./img/sports_logo.jpg\" style=\"position:absolute;top:400px;left:20px;\">";
                             document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:350px;left:320px;\" width=\"60\" height=\"60\">";
                         } else if (eveindx == "3") {
                             //document.write('<img src="./img/matsuri.jpg" width="792" height="568" />');
                             //document.write(year + month + day + week);
                             document.getElementById("image").innerHTML = "<img src=\"./img/matsuri.jpg\">";
-                            document.getElementById("title").innerHTML = "<img src=\"./img/matsuri_logo.png\" style=\"position:absolute;top:400px;left:20px;\">";
                             document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:350px;left:320px;\" width=\"60\" height=\"60\">";
                         } else if (eveindx == "4") {
                             //document.write('<img src="./img/mochi.jpg" width="792" height="568" />');
                             //document.write(year + month + day + week);
                             document.getElementById("image").innerHTML = "<img src=\"./img/mochi.jpg\">";
-                            document.getElementById("title").innerHTML = "<img src=\"./img/mochi_logo.jpg\" style=\"position:absolute;top:400px;left:20px;\">";
                             document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:350px;left:320px;\" width=\"60\" height=\"60\">";
                         } else if (eveindx == "5") {
                             //document.write('<img src="./img/sotsuenshiki.jpg" width="792" height="568" />');
